policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-network-policy
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mariadb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: wordpress
          podSelector:
            matchLabels:
              app.kubernetes.io/name: wordpress
      ports:
        - protocol: TCP
          port:  3306
